// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedThemedPressable Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {},
      ]
    }
    nativeID="0"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {},
      ]
    }
    testID="animated-pressable"
  />
</View>
`;

exports[`ThemedButton Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          {
            "alignItems": "center",
            "backgroundColor": "#7ccf6b",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          },
        ],
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#fafafa",
            "fontSize": 20,
            "lineHeight": 24,
          },
        ]
      }
    >
      Button Text
    </Text>
  </View>
</View>
`;

exports[`ThemedButton Render with children 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          {
            "alignItems": "center",
            "backgroundColor": "#7ccf6b",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          },
        ],
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#fafafa",
            "fontSize": 20,
            "lineHeight": 24,
          },
        ]
      }
    >
      Button with Child
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
          [
            {
              "alignItems": "center",
              "backgroundColor": "#7ccf6b",
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 10,
            },
          ],
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#fafafa",
              "fontSize": 20,
              "lineHeight": 24,
            },
          ]
        }
      >
        Child
      </Text>
    </View>
  </View>
</View>
`;

exports[`ThemedIconButton Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          {
            "alignItems": "center",
            "padding": 10,
          },
        ],
      ]
    }
    testID="icon-button"
  >
    <icon
      color="#7ccf6b"
      name="check"
      size={30}
      style={
        [
          {},
        ]
      }
    />
  </View>
</View>
`;

exports[`ThemedIconTextButton Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          },
        ],
      ]
    }
  >
    <View
      accessible={true}
      role="group"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "gap": 10,
          },
        ]
      }
    >
      <icon
        color="#7ccf6b"
        name="check"
        size={30}
        style={
          [
            {},
          ]
        }
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#7ccf6b",
              "fontSize": 20,
              "lineHeight": 24,
            },
          ]
        }
      >
        Icon Text Button
      </Text>
    </View>
  </View>
</View>
`;

exports[`ThemedIconTextButton Render with flip 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 10,
          },
        ],
      ]
    }
  >
    <View
      accessible={true}
      role="group"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "gap": 10,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#7ccf6b",
              "fontSize": 20,
              "lineHeight": 24,
            },
          ]
        }
      >
        Flipped Button
      </Text>
      <icon
        color="#7ccf6b"
        name="check"
        size={30}
        style={
          [
            {},
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`ThemedPressable Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {},
      ]
    }
    testID="pressable"
  />
</View>
`;
